# pallas-script

./: .gitignore  README.md  package.json
nodejs/src/apps/aplid/: index.js
nodejs/src/apps/aplid/chifeng/: index.js
nodejs/src/apps/aplid/gov51/: index.js
nodejs/src/apps/aplid/menu-sync/: core-5.1.js
nodejs/src/apps/aplid/ningxiang/: index.js
nodejs/src/apps/aplid/nxpro/: index.js
nodejs/src/apps/aplid/own/: index.js
nodejs/src/apps/xbox/: index.js
nodejs/src/apps/xbox/hardware/: index.js
nodejs/src/servers/pallas/: index.js
nodejs/src/servers/pallas/stark/: storage.js
nodejs/src/utils/: AxiosManager.js  EncryptUtil.ts  FileUtils.js  LoggerUtils.js  MysqlUtils.js  RSAEncrypt.js
python/: README.md  pyproject.toml
python/apps/ppc/: __init__.py  cli.py  utils.py
python/apps/ppc/commands/: __init__.py  base.py  calc.py  greet.py  info.py
python/plugins/: mitm_aplid.py
src/: PortIndex.js
src/apps/aplid/: file-process.js  index.js
src/apps/aplid/blockchain/: index.js
src/apps/aplid/blockchain/core/: core.js
src/apps/aplid/chifeng/: index.js
src/apps/aplid/chifeng/homebed/: index.js  request.js
src/apps/aplid/city-platform/: index.js
src/apps/aplid/city-platform/homebed/: core.js  hb_env_assess.js  hb_implement.js  implement.js
src/apps/aplid/mca/: index.js  mca_core.js  request.js
src/apps/aplid/mca/core/: mca_core.js
src/apps/aplid/mca/homebed/: homebed_alloc.js  homebed_apply.js  homebed_audit.js  homebed_change_org.js  homebed_query.js
src/apps/aplid/mca/jujia/: jujia_alloc.js  jujia_apply.js  jujia_audit.js  jujia_fee.js  jujia_history.js  jujia_query.js
src/apps/aplid/ningxiang/: death.js  index.js  jinmin.js
src/apps/data-factory/: index.js  mca.js
src/apps/data-factory/chifeng/: core.js  request.js
src/apps/data-factory/data/: sample.txt
src/apps/data-factory/mca/: axios.js  homebed_alloc.js  homebed_apply.js  homebed_audit.js  index.js  jujia_apply.js  jujia_audit.js  jujia_audit_xian.js  mca.js  mca_core.js  request.js
src/apps/develop/: index.js
src/apps/develop/qrcode/: index.js
src/apps/development/: index.js
src/apps/development/sast/: utils.js
src/apps/encrypt/: index.js
src/apps/hardware/: index.js
src/apps/hardware/om-switch/: index.js
src/apps/hardware/radar/: Logger.js  index.js  radar.js
src/apps/keywords-scan/: index.js
src/apps/lab/: index.js
src/apps/lab/miwi/: index.js  request.js
src/apps/menu-sync/: core-visit.js  index.js
src/apps/mqtt/: index.js  radar.js
src/apps/ningxiang/: death.js  index.js
src/apps/ocr/: index.js
src/apps/om-audio-sync/: index.js
src/apps/pressure/: index.js
src/apps/qrcode/: core.js  index.js
src/apps/sast/: index.js  sast.js  utils.js
src/apps/xbox/: index.js
src/apps/xbox/lab/: index.js
src/apps/xbox/pressure/: core.js  index.js
src/apps/xbox/qrcode/: index.js
src/apps/xbox/quality/: index.js
src/apps/xbox/sast/: sast-core.js
src/apps/xbox/utils/: index.js
src/common/: AxiosManager.js
src/servers/: server.mjs  ws.mjs
src/servers/pallas/stark/: index.js  sample_client.js  stock.js
src/servers/pallas/test/: ws.mjs
src/servers/stark/: StockDataService.js  WebSocketServer.js  index.js  sample_service.js
src/utils/: DmManager.js  EncryptUtil.ts  FileUtils.js  FullCrawler.js  GonganUtils.js  LoggerUtils.js  MinioManager.ts  ToolRegistry.js  file.js  logger.js  xxtea.js
(+65 files in other folders)
