[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ppc"
version = "0.0.1"
description = "Pallas Python CLI 工具"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Cary Chen", email = "logcr@163.com"}
]
keywords = ["pallas", "cli", "tool"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
ppc = "apps.ppc.cli:main"

[project.entry-points."ppc.commands"]
greet = "apps.ppc.commands.greet:GreetCommand"
info = "apps.ppc.commands.info:InfoCommand"
calc = "apps.ppc.commands.calc:CalcCommand"

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.package-data]
ppc = ["*.txt", "*.yaml", "*.json"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=ppc"
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
